--- a/scss/_mediaQueries.scss
+++ b/scss/_mediaQueries.scss
@@ -332,7 +332,7 @@
                         .info{
                             .position{
                                 h4{
-                                    font-size:  $breakText;
+                                    font-size: $smallTitle;
                                 }
                             }
                             .local{
