--- a/scss/_match.scss
+++ b/scss/_match.scss
@@ -31,17 +31,7 @@
             justify-content: space-between;
             align-items: center;
             .cardCompany{
-                width: 85%;
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-                align-items: center;
-                background-color: $cardColor;
-                border-radius: $cardBorderRadius;
-                margin: 30px auto;
-                padding: 5px 15px;
-                column-gap:15px;
-                animation:company 10000ms linear infinite;
+                @include card_match();
                 @keyframes company{
                         0%{
                             transform: translateY(50%);
@@ -66,18 +56,7 @@
                     }
                 }
                 .cardStaff{
-                    width: 85%;
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: space-between;
-                    align-items: center;
-                    background-color: $cardColor;
-                    border-radius: $cardBorderRadius;
-                    margin: 30px auto;
-                    padding: 5px 15px;
-                    column-gap:15px;
-                    animation:company 10000ms linear infinite;
-                    animation: staff 10000ms linear infinite;
+                    @include card_match();
                     @keyframes staff{
                         0%{
                             transform: translateY(-750%);
