--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,5 +1,58 @@
 // Mixins
 
+// Landing - Page
+
+// Hero - Section
+
+@mixin main_cta($background-color: $secondaryColor){
+    width:50%;
+    font-size:$regularText;
+    margin: 0px 2px;
+    text-align: center;
+    padding: $paddingMainCto;
+    text-decoration: none;
+    background-color:$background-color;
+    color:$whiteColor;
+    border-radius: $ctoBorderRadius;
+    font-weight: $bold;
+    transition: all .3s ease-in;
+}
+
+// Match
+
+@mixin card_match{
+    width: 85%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: $cardColor;
+    border-radius: $cardBorderRadius;
+    margin: 30px auto;
+    padding: 5px 15px;
+    column-gap:15px;
+    animation:company 10000ms linear infinite;
+}
+
+// Sponsor
+
+@mixin empresas_patrocinadoras(){
+    width:$widthTotal;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items:center;
+    margin: 30px auto;
+    img{
+        width: 100px;
+        margin: 0px 50px;
+        filter: grayscale(100%);
+        object-fit: cover;
+    }
+}
+
+// Views
+
 // Services
 
 @mixin contenedor_services(){
@@ -92,25 +145,6 @@
     &:hover{
         background-color:$background-color;
         box-shadow:$box-shadow;
-    }
-}
-
-// Landing - Page
-
-// Sponsor
-
-@mixin empresas_patrocinadoras(){
-    width:$widthTotal;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items:center;
-    margin: 30px auto;
-    img{
-        width: 100px;
-        margin: 0px 50px;
-        filter: grayscale(100%);
-        object-fit: cover;
     }
 }
 
