SASS Actualizaciones Mixin

--- a/css/main.css
+++ b/css/main.css
@@ -753,7 +753,7 @@ html .contenedor .arrow {
   margin: 30px auto;
   padding: 5px 15px;
   column-gap: 15px;
-  animation: company 10000ms linear infinite;
+  animation: staff 10000ms linear infinite;
 }
 @keyframes staff {
   0% {
