--- a/scss/_match.scss
+++ b/scss/_match.scss
@@ -32,6 +32,7 @@
             align-items: center;
             .cardCompany{
                 @include card_match();
+                animation:company 10000ms linear infinite;
                 @keyframes company{
                         0%{
                             transform: translateY(50%);
@@ -57,6 +58,7 @@
                 }
                 .cardStaff{
                     @include card_match();
+                    animation: staff 10000ms linear infinite;
                     @keyframes staff{
                         0%{
                             transform: translateY(-750%);
