--- a/views/services.html
+++ b/views/services.html
@@ -335,7 +335,7 @@
                     </div>
                 </article>
             </section>
-            <nav class="menu" data-aos="fade-right">
+            <nav class="menu">
                 <ul>
                     <li><a class="categoria" href="../index.html">Inicio</a></li>
                     <li><a class="categoria" href="services.html">Servicios</a></li>
