--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -20,14 +20,14 @@
 
 // Match
 
-@mixin card_match{
+@mixin card_match($border-radius: $cardBorderRadius){
     width: 85%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     background-color: $cardColor;
-    border-radius: $cardBorderRadius;
+    border-radius: $border-radius;
     margin: 30px auto;
     padding: 5px 15px;
     column-gap:15px;
@@ -35,12 +35,12 @@
 
 // Sponsor
 
-@mixin empresas_patrocinadoras(){
+@mixin empresas_patrocinadoras($display: flex,  $flex-direction: row, $justify-content: space-between,  $align-items:center){
     width:$widthTotal;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items:center;
+    display: $display;
+    flex-direction: $flex-direction;
+    justify-content: $justify-content;
+    align-items: $align-items;
     margin: 30px auto;
     img{
         width: 100px;
@@ -54,8 +54,8 @@
 
 // Services
 
-@mixin contenedor_services(){
-    background-color:  $backgroundColor;
+@mixin contenedor_services($background-color: $backgroundColor){
+    background-color: $backgroundColor;
     border-radius: 5px;
     cursor:pointer;
     margin: 3px 3px;
@@ -105,7 +105,7 @@
 
 // Jobs{
 
-@mixin card_job(){
+@mixin card_job($backgroundColor: $backgroundColor){
     display: flex;
     flex-direction: row;
     justify-content: space-around;
