--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,8 +3,8 @@
 @import "_commons";
 @import "_mixins";
 @import "_nav";
-@import "_heroSection";
-@import "_aboutUs";
+@import "_hero_section";
+@import "_about_us";
 @import "_services";
 @import "_advertising";
 @import "_match";
@@ -15,5 +15,5 @@
 @import "_form";
 @import "_footer";
 @import "_error404";
-@import "_mediaQueriesLanding";
-@import "_mediaQueries";
+@import "_media_landing";
+@import "_media";
