Acualization Pics WEBP

--- a/views/error404.html
+++ b/views/error404.html
@@ -24,10 +24,10 @@
 <body>
     <section class="mainContainer">
         <article class="main">
-            <img class="item" src="../img/banner1.png" alt="Imagen Not found">
-            <img class="item1" src="../img/img.png" alt="Imagen abstracta">
-            <img class="item2" src="../img/banner2.png" alt="Imagen 404">
-            <img class="item3" src="../img/banner3.png" alt="Imagen sentence">
+            <img class="item" src="../img/banner1.webp" alt="Imagen Not found">
+            <img class="item1" src="../img/img.webp" alt="Imagen abstracta">
+            <img class="item2" src="../img/banner2.webp" alt="Imagen 404">
+            <img class="item3" src="../img/banner3.webp" alt="Imagen sentence">
             <a href="../index.html" class="return"><span><-</span>Retornar</a>
         </article>
     </section>
