--- a/scss/_advertising.scss
+++ b/scss/_advertising.scss
@@ -20,7 +20,7 @@
 .bannerPublicidadDos{
     width:$widthTotal;
     height: auto;
-    background-image:url("../img/backgroundSteps2.png");
+    background-image:url("../img/backgroundSteps2.webp");
     background-attachment: fixed;
     background-position: 100%;
     background-repeat: no-repeat;
