--- a/scss/_hero_section.scss
+++ b/scss/_hero_section.scss
@@ -4,7 +4,7 @@
     width:$widthTotal;
     height: auto;
     max-height: max-content;
-    background-image: url("../img/pic1.png");
+    background-image: url("../img/pic1.webp");
     background-position: 100%;
     background-repeat: no-repeat;
     background-size: cover;
