--- a/views/services.html
+++ b/views/services.html
@@ -9,9 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600&family=Press+Start+2P&display=swap" rel="stylesheet">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="img/logo2.png" sizes="16x16"/>
-    <link rel="icon" type="image/png" href="img/logo2.png" sizes="32x32"/>
-    <link rel="icon" type="image/png" href="img/logo2.png" sizes="64x64"/>
+    <link rel="icon" type="image/svg" href="img/logo2.svg" sizes="16x16"/>
+    <link rel="icon" type="image/svg" href="img/logo2.svg" sizes="32x32"/>
+    <link rel="icon" type="image/svg" href="img/logo2.svg" sizes="64x64"/>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Hoja de estilos -->
@@ -27,41 +27,41 @@
 
     <header class="header">
         <a class="logo" href="../index.html">
-            <img class="logoDelord" src="../img/logo2.png" alt="Logo Delord">
+            <img class="logoDelord" src="../img/logo2.svg" alt="Logo Delord">
         </a>
         <input id="menu" type="checkbox">
         <label for="menu">
-            <img class="drawer" src="../img/drawer.png" alt="Menu">
+            <img class="drawer" src="../img/drawer.svg" alt="Menu">
         </label>
         <nav class="menu" >
             <label for="menu">
-                <img class="close" src="../img/close.png" alt="Cerrar">
+                <img class="close" src="../img/close.svg" alt="Cerrar">
             </label>
             <ul class="my-4 mx-4">
-                <li><a class="categoria py-4 px-4" href="../index.html"><img class="item" src="../img/home.png" alt="Home">Inicio</a></li>
-                <li><a class="categoria py-4 px-4" href="services.html"><img class="item" src="../img/service.png" alt="Servicio">Servicios</a></li>
-                <li><a class="categoria py-4 px-4" href="jobs.html"><img class="item" src="../img/job.png" alt="Empleo">Empleos</a></li>
-                <li><a class="categoria py-4 px-4" href="testimonies.html"><img class="item" src="../img/testimony.png" alt="Testimonio">Testimonios</a></li>
-                <li><a class="categoria py-4 px-4" href="contactus.html"><img class="item" src="../img/contact.png" alt="contacto">Contactanos</a></li>
+                <li><a class="categoria py-4 px-4" href="../index.html"><img class="item" src="../img/home.svg" alt="Home">Inicio</a></li>
+                <li><a class="categoria py-4 px-4" href="services.html"><img class="item" src="../img/service.svg" alt="Servicio">Servicios</a></li>
+                <li><a class="categoria py-4 px-4" href="jobs.html"><img class="item" src="../img/job.svg" alt="Empleo">Empleos</a></li>
+                <li><a class="categoria py-4 px-4" href="testimonies.html"><img class="item" src="../img/testimony.svg" alt="Testimonio">Testimonios</a></li>
+                <li><a class="categoria py-4 px-4" href="contactus.html"><img class="item" src="../img/contact.svg" alt="contacto">Contactanos</a></li>
             </ul>
             <section class="socialMedia">
                 <a href="https://es-la.facebook.com/" target="_blank" >
-                    <img src="../img/facebook.png" alt="Logo facebook" class="iconLink">
+                    <img src="../img/facebook.svg" alt="Logo facebook" class="iconLink">
                 </a>
                 <a href="https://linkedin.com/" target="_blank">
-                    <img src="../img/linkedin.png" alt="Logo linkedin" class="iconLink">
+                    <img src="../img/linkedin.svg" alt="Logo linkedin" class="iconLink">
                 </a>
                 <a href="https://twitter.com/" target="_blank">
-                    <img src="../img/twitter.png" alt="Logo twitter" class="iconLink">
+                    <img src="../img/twitter.svg" alt="Logo twitter" class="iconLink">
                 </a>
                 <a href="https://discord.com/" target="_blank">
-                    <img src="../img/discord.png" alt="Logo discord" class="iconLink">
+                    <img src="../img/discord.svg" alt="Logo discord" class="iconLink">
                 </a>
                 <a href="https://instagram.com/" target="_blank">
-                    <img src="../img/instagram.png" alt="Logo instagram" class="iconLink">
+                    <img src="../img/instagram.svg" alt="Logo instagram" class="iconLink">
                 </a>
                 <a href="https://youtube.com/" target="_blank">
-                    <img src="../img/youtube.png" alt="Logo youtube" class="iconLink">
+                    <img src="../img/youtube.svg" alt="Logo youtube" class="iconLink">
                 </a>
             </section>
         </nav>
@@ -75,22 +75,22 @@
 
         <section class="socialMediaUno">
             <a class="mt-1" href="https://es-la.facebook.com/" target="_blank" >
-                <img src="../img/facebook.png" alt="Logo facebook" class="iconLink">
+                <img src="../img/facebook.svg" alt="Logo facebook" class="iconLink">
             </a>
             <a class="mt-1" href="https://linkedin.com/" target="_blank">
-                <img src="../img/linkedin.png" alt="Logo linkedin" class="iconLink">
+                <img src="../img/linkedin.svg" alt="Logo linkedin" class="iconLink">
             </a>
             <a class="mt-1" href="https://twitter.com/" target="_blank">
-                <img src="../img/twitter.png" alt="Logo twitter" class="iconLink">
+                <img src="../img/twitter.svg" alt="Logo twitter" class="iconLink">
             </a>
             <a class="mt-1" href="https://discord.com/" target="_blank">
-                <img src="../img/discord.png" alt="Logo discord" class="iconLink">
+                <img src="../img/discord.svg" alt="Logo discord" class="iconLink">
             </a>
             <a class="mt-1" href="https://instagram.com/" target="_blank">
-                <img src="../img/instagram.png" alt="logo instagram" class="iconLink">
+                <img src="../img/instagram.svg" alt="logo instagram" class="iconLink">
             </a>
             <a class="mt-1" href="https://youtube.com/" target="_blank">
-                <img src="../img/youtube.png" alt="logo youtube" class="iconLink">
+                <img src="../img/youtube.svg" alt="logo youtube" class="iconLink">
             </a>
         </section>
 
@@ -98,7 +98,7 @@
 
         <section class="arrowUp">
             <a class="arrow" href="#">
-                <img src="../img/arrowup.png" alt="Flecha arriba">
+                <img src="../img/arrowup.svg" alt="Flecha arriba">
             </a>
         </section>
 
@@ -317,12 +317,12 @@
         <div class="mainFooter">
             <section class="services">
                 <a class="my-1" href="../index.html">
-                    <img class="logo" src="../img/logo2.png" alt="Logo Delord">
+                    <img class="logo" src="../img/logo2.svg" alt="Logo Delord">
                 </a>
                 <article class="apps">
                     <h4>Proximamente</h4>
-                    <a href="https://play.google.com/store/games?hl=es_419&gl=US&pli=1" target="_blank"><img class="app mb-1" src="../img/playstore.png" alt="Play Store"></a>
-                    <a href="https://www.apple.com/co/app-store/" target="_blank"><img class="app mb-1" src="../img/appstore.png" alt="App Store"></a>
+                    <a href="https://play.google.com/store/games?hl=es_419&gl=US&pli=1" target="_blank"><img class="app mb-1" src="../img/playstore.svg" alt="Play Store"></a>
+                    <a href="https://www.apple.com/co/app-store/" target="_blank"><img class="app mb-1" src="../img/appstore.svg" alt="App Store"></a>
                 </article>
             </section>
             </section>
@@ -349,32 +349,32 @@
             <ul class="socialMedia">
                 <li>
                     <a href="https://es-la.facebook.com/" target="_blank" >
-                        <img src="../img/facebook.png" alt="Logo facebook" class="iconLink">
+                        <img src="../img/facebook.svg" alt="Logo facebook" class="iconLink">
                     </a>
                 </li>
                 <li>
                     <a href="https://linkedin.com/" target="_blank">
-                        <img src="../img/linkedin.png" alt="Logo linkedin" class="iconLink">
+                        <img src="../img/linkedin.svg" alt="Logo linkedin" class="iconLink">
                     </a>
                 </li>
                 <li>
                     <a href="https://twitter.com/" target="_blank">
-                        <img src="../img/twitter.png" alt="Logo twitter" class="iconLink">
+                        <img src="../img/twitter.svg" alt="Logo twitter" class="iconLink">
                     </a>
                 </li>
                 <li>
                     <a href="https://discord.com/" target="_blank">
-                        <img src="../img/discord.png" alt="Logo discord" class="iconLink">
+                        <img src="../img/discord.svg" alt="Logo discord" class="iconLink">
                     </a>
                 </li>
                 <li>
                     <a href="https://instagram.com/" target="_blank">
-                        <img src="../img/instagram.png" alt="Logo instagram" class="iconLink">
+                        <img src="../img/instagram.svg" alt="Logo instagram" class="iconLink">
                     </a>
                 </li>
                 <li>
                     <a href="https://youtube.com/" target="_blank">
-                        <img src="../img/youtube.png" alt="Logo youtube" class="iconLink">
+                        <img src="../img/youtube.svg" alt="Logo youtube" class="iconLink">
                     </a>
                 </li>
             </ul>
