--- a/views/error404.html
+++ b/views/error404.html
@@ -9,9 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600&family=Press+Start+2P&display=swap" rel="stylesheet">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="img/logo2.png" sizes="16x16"/>
-    <link rel="icon" type="image/png" href="img/logo2.png" sizes="32x32"/>
-    <link rel="icon" type="image/png" href="img/logo2.png" sizes="64x64"/>
+    <link rel="icon" type="image/svg" href="../img/logo2.svg" sizes="16x16"/>
+    <link rel="icon" type="image/svg" href="../img/logo2.svg" sizes="32x32"/>
+    <link rel="icon" type="image/svg" href="../img/logo2.svg" sizes="64x64"/>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Hoja de estilos -->
