Actualization Meta description

--- a/views/contactus.html
+++ b/views/contactus.html
@@ -20,6 +20,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Normalize -->
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel='stylesheet'>
+    <!-- Meta para SEO -->
+    <meta name="description" content="Contacta con nosotros para obtener más información sobre nuestros servicios de empleo para desarrolladores y diseñadores web, así como las soluciones que ofrecemos a las empresas. Estamos aquí para ayudarte a encontrar el talento adecuado o la oportunidad de carrera perfecta." />
+
 </head>
 <body>
 
