--- a/views/jobs.html
+++ b/views/jobs.html
@@ -20,6 +20,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Normalize -->
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel='stylesheet'>
+    <!-- Meta para SEO -->
+    <meta name="description" content="Explora una amplia gama de oportunidades de empleo en el campo de desarrollo y diseño web. Encuentra puestos de trabajo emocionantes y desafiantes que se adaptan a tus habilidades y aspiraciones. Únete a empresas líderes y da un paso adelante en tu carrera en el mundo digital." />
 </head>
 <body>
 
