--- a/views/services.html
+++ b/views/services.html
@@ -20,6 +20,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Normalize -->
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel='stylesheet'>
+    <!-- Meta para SEO -->
+    <meta name="description" content="Potencia tu empresa con nuestros servicios integrales de desarrollo y diseño web. Ofrecemos soluciones personalizadas para satisfacer tus necesidades digitales, desde la creación de sitios web a medida hasta la optimización de aplicaciones. Impulsa tu presencia en línea y destaca en un mundo digital en constante evolución." />
 </head>
 <body>
 
