--- a/views/testimonies.html
+++ b/views/testimonies.html
@@ -20,6 +20,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Normalize -->
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel='stylesheet'>
+    <!-- Meta para SEO -->
+    <meta name="description" content="Descubre lo que nuestros clientes y candidatos satisfechos tienen que decir sobre nuestra plataforma de servicios de empleo para desarrolladores y diseñadores web. Lee testimonios reales que destacan nuestras soluciones y el éxito que hemos logrado en el campo del reclutamiento digital." />
 </head>
 <body>
 
