Actualization Meta Description & Keywords

--- a/views/contactus.html
+++ b/views/contactus.html
@@ -22,7 +22,7 @@
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel='stylesheet'>
     <!-- Meta para SEO -->
     <meta name="description" content="Contacta con nosotros para obtener más información sobre nuestros servicios de empleo para desarrolladores y diseñadores web, así como las soluciones que ofrecemos a las empresas. Estamos aquí para ayudarte a encontrar el talento adecuado o la oportunidad de carrera perfecta." />
-
+    <meta name="keywords" content="Preguntas frecuentes, Servicios de empleo, Búsqueda de trabajo, Publicación de trabajos, Notificaciones de trabajo, Recursos educativos, Mejorar perfil, Contacto con empleadores, Seguridad de usuarios, Atención al cliente, Actualización de perfil, Solicitud de trabajo, Notificación de solicitud, News letter" />
 </head>
 <body>
 
