--- a/views/services.html
+++ b/views/services.html
@@ -22,6 +22,7 @@
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel='stylesheet'>
     <!-- Meta para SEO -->
     <meta name="description" content="Potencia tu empresa con nuestros servicios integrales de desarrollo y diseño web. Ofrecemos soluciones personalizadas para satisfacer tus necesidades digitales, desde la creación de sitios web a medida hasta la optimización de aplicaciones. Impulsa tu presencia en línea y destaca en un mundo digital en constante evolución." />
+    <meta name="keywords" content="Tecnologías desarrollador web, CSS, JS, HTML, Angular, VueJS, Github, SASS, Bootstrap, Typescript, React, Python, Java, Tailwind, Laravel, PHP, NodeJS, Docker, AWS, Postgresql, Slack, Tecnologías diseñador UX/UI, Adobe Photoshop, Adobe Illustrator, Figma, Adobe XD, Sketch, Optimal Workshop, Whimsical, After Effects, Github, Invision, Trello, Jira, UX Research, UX Writing, UI, UX, Brand Design, Graphic Design, Behance, Design System" />
 </head>
 <body>
 
