--- a/views/jobs.html
+++ b/views/jobs.html
@@ -22,6 +22,7 @@
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel='stylesheet'>
     <!-- Meta para SEO -->
     <meta name="description" content="Explora una amplia gama de oportunidades de empleo en el campo de desarrollo y diseño web. Encuentra puestos de trabajo emocionantes y desafiantes que se adaptan a tus habilidades y aspiraciones. Únete a empresas líderes y da un paso adelante en tu carrera en el mundo digital." />
+    <meta name="keywords" content="Ofertas de empleo, Desarrolladores web, CSS, JS, HTML, Angular, VueJS, Github, SASS, Bootstrap, Typescript, React, Python, Java, Tailwind, Laravel, PHP, NodeJS, Docker, AWS, Postgresql, Slack, Diseñadores UX/UI, Diseñador UX/UI, Adobe Photoshop, Adobe Illustrator, Figma, Adobe XD, Sketch, Optimal Workshop, Whimsical, After Effects, Github, Invision, Trello, Jira, UX Research, UX Writing, UI, UX, Brand Design, Graphic Design, Behance, Design System" />
 </head>
 <body>
 
