--- a/views/testimonies.html
+++ b/views/testimonies.html
@@ -22,6 +22,7 @@
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel='stylesheet'>
     <!-- Meta para SEO -->
     <meta name="description" content="Descubre lo que nuestros clientes y candidatos satisfechos tienen que decir sobre nuestra plataforma de servicios de empleo para desarrolladores y diseñadores web. Lee testimonios reales que destacan nuestras soluciones y el éxito que hemos logrado en el campo del reclutamiento digital." />
+    <meta name="keywords" content="Testimonios, Empleo, Desarrolladores web, Diseñadores UX/UI, Experiencias laborales, Opiniones de candidatos, Plataforma de empleo, Carreras profesionales, Desarrollo web, Diseño UX/UI, Fullstack" />
 </head>
 <body>
 
