Actualization Meta Datas

--- a/views/error404.html
+++ b/views/error404.html
@@ -20,6 +20,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Normalize -->
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel='stylesheet'>
+    <meta name="author" content="Diego Marin Mora & Delord Company" />
+    <meta name="copyright" content="© [2023] [Diego Marin Mora & Delord Company]" />
+    <meta name="robots" content="noindex, nofollow" />
 </head>
 <body>
     <section class="mainContainer">
