--- a/views/jobs.html
+++ b/views/jobs.html
@@ -23,6 +23,9 @@
     <!-- Meta para SEO -->
     <meta name="description" content="Explora una amplia gama de oportunidades de empleo en el campo de desarrollo y diseño web. Encuentra puestos de trabajo emocionantes y desafiantes que se adaptan a tus habilidades y aspiraciones. Únete a empresas líderes y da un paso adelante en tu carrera en el mundo digital." />
     <meta name="keywords" content="Ofertas de empleo, Desarrolladores web, CSS, JS, HTML, Angular, VueJS, Github, SASS, Bootstrap, Typescript, React, Python, Java, Tailwind, Laravel, PHP, NodeJS, Docker, AWS, Postgresql, Slack, Diseñadores UX/UI, Diseñador UX/UI, Adobe Photoshop, Adobe Illustrator, Figma, Adobe XD, Sketch, Optimal Workshop, Whimsical, After Effects, Github, Invision, Trello, Jira, UX Research, UX Writing, UI, UX, Brand Design, Graphic Design, Behance, Design System" />
+    <meta name="author" content="Diego Marin Mora & Delord Company" />
+    <meta name="copyright" content="© [2023] [Diego Marin Mora & Delord Company]" />
+    <meta name="robots" content="index, nofollow" />
 </head>
 <body>
 
