--- a/views/testimonies.html
+++ b/views/testimonies.html
@@ -23,6 +23,9 @@
     <!-- Meta para SEO -->
     <meta name="description" content="Descubre lo que nuestros clientes y candidatos satisfechos tienen que decir sobre nuestra plataforma de servicios de empleo para desarrolladores y diseñadores web. Lee testimonios reales que destacan nuestras soluciones y el éxito que hemos logrado en el campo del reclutamiento digital." />
     <meta name="keywords" content="Testimonios, Empleo, Desarrolladores web, Diseñadores UX/UI, Experiencias laborales, Opiniones de candidatos, Plataforma de empleo, Carreras profesionales, Desarrollo web, Diseño UX/UI, Fullstack" />
+    <meta name="author" content="Diego Marin Mora & Delord Company" />
+    <meta name="copyright" content="© [2023] [Diego Marin Mora & Delord Company]" />
+    <meta name="robots" content="index, nofollow" />
 </head>
 <body>
 
