--- a/views/services.html
+++ b/views/services.html
@@ -23,6 +23,9 @@
     <!-- Meta para SEO -->
     <meta name="description" content="Potencia tu empresa con nuestros servicios integrales de desarrollo y diseño web. Ofrecemos soluciones personalizadas para satisfacer tus necesidades digitales, desde la creación de sitios web a medida hasta la optimización de aplicaciones. Impulsa tu presencia en línea y destaca en un mundo digital en constante evolución." />
     <meta name="keywords" content="Tecnologías desarrollador web, CSS, JS, HTML, Angular, VueJS, Github, SASS, Bootstrap, Typescript, React, Python, Java, Tailwind, Laravel, PHP, NodeJS, Docker, AWS, Postgresql, Slack, Tecnologías diseñador UX/UI, Adobe Photoshop, Adobe Illustrator, Figma, Adobe XD, Sketch, Optimal Workshop, Whimsical, After Effects, Github, Invision, Trello, Jira, UX Research, UX Writing, UI, UX, Brand Design, Graphic Design, Behance, Design System" />
+    <meta name="author" content="Diego Marin Mora & Delord Company" />
+    <meta name="copyright" content="© [2023] [Diego Marin Mora & Delord Company]" />
+    <meta name="robots" content="index, nofollow" />
 </head>
 <body>
 
