--- a/views/jobs.html
+++ b/views/jobs.html
@@ -1396,7 +1396,7 @@
                             </article>
                             <article class="links">
                                 <a class="text-decoration-none" href="./error404.html" target="_blank">
-                                    <img src="../img/favoritossvgg" alt="Favoritos" class="iconLink">
+                                    <img src="../img/favoritos.svg" alt="Favoritos" class="iconLink">
                                 </a>
                                 <a class="text-decoration-none" href="./error404.html" target="_blank">
                                     <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
