Actuzalizacion files svg

--- a/views/jobs.html
+++ b/views/jobs.html
@@ -908,7 +908,7 @@
                         </article>
                     </div>
                     <a href="#" class="postulate">
-                        <img src="../img/checsvg" alt="check" class="check">
+                        <img src="../img/check.svg" alt="check" class="check">
                         ¡Postulate!
                     </a>
                 </div>
