Actualizacion corregir errores de iconos Empleo

--- a/views/jobs.html
+++ b/views/jobs.html
@@ -1044,7 +1044,7 @@
                                 </div>
                                 <div class="local">
                                     <div class="data">
-                                        <p><img src="../img/factorsvg" alt="Compañia" class="dataLink">
+                                        <p><img src="../img/factory.svg" alt="Compañia" class="dataLink">
                                             H&H</p>
                                         <p><img src="../img/map.svg" alt="Mapa" class="dataLink">
                                             Medellín, Colombia</p>
@@ -1388,7 +1388,7 @@
                                     <div class="data">
                                         <p><img src="../img/factory.svg" alt="Compañia" class="dataLink">
                                             Corning</p>
-                                        <p><img src="../img/masvg" alt="Mapa" class="dataLink">
+                                        <p><img src="../img/map.svg" alt="Mapa" class="dataLink">
                                             Medellín, Colombia</p>
                                     </div>
                                     <p><span>Publicado 23/10/2023</span></p>
